# curry

./: .gitignore  curry.py  pyproject.toml  setup.py  tasks.py  tox.ini
curry/: curry.py
tests/: curry_test.py
