[tool.poetry]
name = "curry"
version = "1.0.0"
description = ""
authors = ["Ivan Malison <ivanmalison@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/colonelpanic8/curry"
keywords = ["curry", "functional", "partial", "partialable", "functools", "decorator"]
packages = [
    { include = "curry" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ipdb = "*"
tox = "*"
pytest = "*"
mock = "*"
flameprof = "*"
isort = "^5.13.0"
black = "*"
python-lsp-server = {extras = ["all"], version = "^1.7.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
